<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">

    <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_tv"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/user_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/webpage_bt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="@dimen/webpage_bt_mg_top" app:layout_constraintTop_toBottomOf="@+id/avatar_iv"
            style="@style/Widget.AppCompat.Button.Colored" />
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/avatar_iv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/login_tv"
            android:contentDescription="@string/github_avatar"/>
</android.support.constraint.ConstraintLayout>