<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/user_et"
            android:layout_marginEnd="@dimen/main_margin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textAlignment="center"/>
    <Button
            android:text="@string/generate_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/generate_bt" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/user_et" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/main_margin"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/enter_your_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin"
            android:gravity="center"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/generate_progress" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/generate_bt" android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>